draggable column panels

--- a/css/app.css
+++ b/css/app.css
@@ -28,3 +28,10 @@ body {
     width: fit-content;
   }
 }
+
+#draggablePanelList .panel-heading {
+  cursor: move;
+}
+#draggablePanelList2 .panel-heading {
+  cursor: move;
+}
