--- a/css/app.css
+++ b/css/app.css
@@ -35,6 +35,10 @@ body {
   .card {
     width: fit-content;
   }
+
+  .navdiv {
+    visibility: hidden;
+  }
 }
 
 #draggablePanelList .panel-heading {
