major ui changes

--- a/css/app2.css
+++ b/css/app2.css
@@ -4519,6 +4519,11 @@ details.collapse summary::-webkit-details-marker {
   position: sticky;
 }
 
+.inset-x-0 {
+  left: 0px;
+  right: 0px;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
